--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -78,7 +78,7 @@ jobs:
         wget -O flex_bison\flex_bison.zip https://github.com/lexxmark/winflexbison/releases/download/v2.5.25/win_flex_bison-2.5.25.zip
         cd flex_bison
         unzip flex_bison.zip
-        $env:PATH = "$env:PATH;${{github.workspace}}\flex_bison
+        $env:PATH = "$env:PATH;${{github.workspace}}\flex_bison"
 
     - name: checkout repository codes
       uses: actions/checkout@v2
