--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -79,12 +79,14 @@ jobs:
         cd flex_bison
         unzip flex_bison.zip
         $env:PATH = "$env:PATH;${{github.workspace}}\flex_bison"
+        echo $env:PATH
 
     - name: checkout repository codes
       uses: actions/checkout@v2
 
     - name: generates csproj files
       run: |
+        echo $env:PATH
         python ${{github.workspace}}\build\builder.py dbg
 
   publish-doc:
