builder: fix: test module should be omitted on Windows-CI server

--- a/mod/CMakeLists.txt
+++ b/mod/CMakeLists.txt
@@ -11,5 +11,7 @@ add_subdirectory(meta)
 add_subdirectory(memlite)
 add_subdirectory(swrd)
 add_subdirectory(wrd)
-add_subdirectory(test)
+IF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
+	add_subdirectory(test)
+ENDIF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
 add_subdirectory(wrc)
