--- a/mod/CMakeLists.txt
+++ b/mod/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(indep)
 add_subdirectory(clog)
 add_subdirectory(meta)
 add_subdirectory(memlite)
-add_subdirectory(swrd)
+add_subdirectory(seedling)
 add_subdirectory(wrd)
 IF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
 	add_subdirectory(test)
