--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -34,7 +34,7 @@ jobs:
     - name: build & test current codes.
       run: |
         export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/swrd/parser
+        ls -l ${{github.workspace}}/mod/seedling/parser
         sudo $PYTHON ${{github.workspace}}/build/builder.py dbg
         sudo $PYTHON ${{github.workspace}}/build/builder.py test
 
@@ -55,7 +55,7 @@ jobs:
       run: |
         export PATH="/usr/local/opt/flex/bin:/usr/local/opt/bison/bin:$PATH"
         export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/swrd/parser
+        ls -l ${{github.workspace}}/mod/seedling/parser
         sudo $PYTHON ${{github.workspace}}/build/builder.py dbg
         sudo $PYTHON ${{github.workspace}}/build/builder.py test
   
