--- a/.github/workflows/ci-stable.yml
+++ b/.github/workflows/ci-stable.yml
@@ -32,7 +32,7 @@ jobs:
     - name: build & test current codes.
       run: |
         export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/swrd/parser
+        ls -l ${{github.workspace}}/mod/seedling/parser
         sudo $PYTHON ${{github.workspace}}/build/builder.py pub deb
         sudo $PYTHON ${{github.workspace}}/build/builder.py test
 
@@ -59,7 +59,7 @@ jobs:
       run: |
         export PATH="/usr/local/opt/flex/bin:/usr/local/opt/bison/bin:$PATH"
         export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/swrd/parser
+        ls -l ${{github.workspace}}/mod/seedling/parser
         sudo $PYTHON ${{github.workspace}}/build/builder.py rel
         sudo $PYTHON ${{github.workspace}}/build/builder.py test
         sudo $PYTHON ${{github.workspace}}/build/builder.py pub mac
