--- a/mod/CMakeLists.txt
+++ b/mod/CMakeLists.txt
@@ -15,3 +15,4 @@ IF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
 	add_subdirectory(test)
 ENDIF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
 add_subdirectory(namu)
+add_subdirectory(bundle)
