feat: supports wasm build

--- a/mod/CMakeLists.txt
+++ b/mod/CMakeLists.txt
@@ -12,7 +12,12 @@ add_subdirectory(memlite)
 add_subdirectory(seedling)
 add_subdirectory(core)
 IF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
-	add_subdirectory(test)
+    IF(NOT EMSCRIPTEN)
+        add_subdirectory(test)
+    ENDIF(NOT EMSCRIPTEN)
 ENDIF(NOT CMAKE_SYSTEM_NAME STREQUAL Windows)
 add_subdirectory(namu)
-add_subdirectory(bundle)
+
+IF(NOT EMSCRIPTEN)
+    add_subdirectory(bundle)
+ENDIF(NOT EMSCRIPTEN)
