--- a/mod/meta/CMakeLists.txt
+++ b/mod/meta/CMakeLists.txt
@@ -22,14 +22,18 @@ file(GLOB_RECURSE sources
 foreach(e ${sources})
     message("\tembeding ${e}")
 endforeach(e)
-set(dependencies ${dependencies} indep clog)
+set(dependencies ${dependencies} clog)
 foreach(e ${dependencies})
     message("\tlinking ${e}")
 endforeach(e)
 
 
 #  execute:
-add_library(${moduleName} SHARED ${sources})
+IF(EMSCRIPTEN)
+    add_library(${moduleName} ${sources})
+ELSE(EMSCRIPTEN)
+    add_library(${moduleName} SHARED ${sources})
+ENDIF(EMSCRIPTEN)
 set_target_properties(${moduleName} PROPERTIES SUFFIX ".${NAMU_LIBRARY_EXTENSION}")
 target_link_libraries(${moduleName} ${dependencies})
 
