--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -94,10 +94,13 @@ jobs:
 
     steps:
       - name: install native dependencies.
-        run: sudo apt install doxygen graphviz python3 python3-pip
+        run: sudo apt install doxygen graphviz python3 python3-pip ruby-full
 
       - name: install python dependencies.
         run: sudo python3 -m pip install --upgrade jinja2 Pygments
+
+      - name: install gems.
+        run: sudo gem install jekyll bundler
 
       - name: checkout master codes.
         uses: actions/checkout@v2
