chore: update github action

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -102,11 +102,13 @@ jobs:
       - name: install gems.
         run: sudo gem install jekyll bundler
 
-      - name: install jekyll plugins.
-        run: bundle install
-
       - name: checkout master codes.
         uses: actions/checkout@v2
+
+      - name: install jekyll plugins.
+        run: |
+          cd ${{github.workspace}}/build/html
+          bundle install
 
       - name: commit docs if it's different to previous commit
         run: |
