--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: install native dependencies.
       run: |
+        sudo apt-get update
         sudo apt install python3 python3-pip cmake wget flex graphviz
         ls .
         sudo wget https://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
