--- a/.gitignore
+++ b/.gitignore
@@ -60,14 +60,14 @@ docs/html/
 docs/xml/
 .DS_Store
 bin/
-**/interpreter/bison/lowscanner.cpp
-**/interpreter/bison/lowscanner.hpp
-**/interpreter/bison/lowparser.cpp
-**/interpreter/bison/lowparser.hpp
-**/interpreter/bison/bisonReport.*
-**/interpreter/bison/*.output
-**/interpreter/bison/*.gv
-**/interpreter/bison/*.jpg
+**/worker/bison/lowscanner.cpp
+**/work/bison/lowscanner.hpp
+**/work/bison/lowparser.cpp
+**/work/bison/lowparser.hpp
+**/work/bison/bisonReport.*
+**/work/bison/*.output
+**/work/bison/*.gv
+**/work/bison/*.jpg
 **/parser/seedlingParser.cpp
 **/parser/seedlingParser.hpp
 **/parser/seedlingScanner.cpp
