chore: update to add 'worker' folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -61,13 +61,13 @@ docs/xml/
 .DS_Store
 bin/
 **/worker/bison/lowscanner.cpp
-**/work/bison/lowscanner.hpp
-**/work/bison/lowparser.cpp
-**/work/bison/lowparser.hpp
-**/work/bison/bisonReport.*
-**/work/bison/*.output
-**/work/bison/*.gv
-**/work/bison/*.jpg
+**/worker/bison/lowscanner.hpp
+**/worker/bison/lowparser.cpp
+**/worker/bison/lowparser.hpp
+**/worker/bison/bisonReport.*
+**/worker/bison/*.output
+**/worker/bison/*.gv
+**/worker/bison/*.jpg
 **/parser/seedlingParser.cpp
 **/parser/seedlingParser.hpp
 **/parser/seedlingScanner.cpp
