--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -2,57 +2,12 @@ name: CI for main
 
 on:
   push:
-    branches: [ main ]
+    branches: [ test-workflow ]
   pull_request:
-    branches: [ main ]
+    branches: [ test-workflow ]
 
 jobs:
-  checking-code-format:
-    name: check code format with clang-format
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        path:
-          - check: 'mod'
-            exclude: '(leafLowparser|leafLowscanner|lowparser|lowscanner)'
-    steps:
-    - name: checkout repository codes
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: install native dependencies
-      run: |
-        sudo apt update
-        sudo apt-get install ca-certificates curl
-        sudo install -m 0755 -d /etc/apt/keyrings
-        sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-        sudo chmod a+r /etc/apt/keyrings/docker.asc
-
-        echo \
-          "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-          $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | \
-          sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-        sudo apt-get update
-        
-        sudo apt-get install python3 docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-
-    - name: run formatter 
-      run: |
-        cd ${{github.workspace}} 
-        python3 build/builder.py format docker
-
-    - name: check if there is a style violiations 
-      run: |
-        git diff > output.txt
-        if [ -s output.txt ]; then
-          echo "error: some codes violates our code style."
-          cat output.txt
-          exit 1
-        fi
-
-  build-on-linux:
-    needs: [checking-code-format]
+  build-on-linux-gcc:
     name: build on linux
     runs-on: ubuntu-22.04
 
@@ -60,7 +15,7 @@ jobs:
     - name: install native dependencies.
       run: |
         sudo apt-get update
-        sudo apt install -y python3 python3-pip cmake wget flex graphviz clang clang-format clang-tidy
+        sudo apt install -y python3 python3-pip cmake wget flex graphviz
         ls .
         sudo wget https://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
         tar -zxvf bison-3.8.2.tar.gz
@@ -74,6 +29,13 @@ jobs:
           sudo mv /usr/bin/bison /usr/bin/bison-prev
         fi
         sudo ln -s /usr/local/bin/bison /usr/bin/bison
+
+    - name: remove clang
+      run: |
+        which clang++
+        if [ $? -ne 0 ]; then
+          sudo mv $(which clang++) /tmp
+        fi
 
     - name: checkout repository codes
       uses: actions/checkout@v2
@@ -90,230 +52,3 @@ jobs:
       with:
         name: namu-ubuntu-x64
         path: ${{github.workspace}}/bin/namu-ubuntu-x64.deb
-
-  build-for-wasm:
-    needs: [checking-code-format]
-    name: build for wasm
-    runs-on: ubuntu-22.04
-
-    steps:
-    - name: checkout repository codes
-      uses: actions/checkout@v2
-
-    - name: install native dependencies.
-      run: |
-        sudo apt-get update
-        sudo apt install -y python3 python3-pip cmake wget flex graphviz clang clang-format clang-tidy
-        ls .
-        sudo wget https://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
-        tar -zxvf bison-3.8.2.tar.gz
-        cd bison-3.8.2
-        ./configure
-        sudo make
-        sudo make install
-        cd ..
-        echo $(which bison)
-        sudo rm -rf bison-3.8.2
-        if [ -f /usr/bin/bison ]; then
-          sudo mv /usr/bin/bison /usr/bin/bison-prev
-        fi
-        sudo ln -s /usr/local/bin/bison /usr/bin/bison
-
-    - name: install emscripten librires
-      uses: mymindstorm/setup-emsdk@v14
-
-    - name: verify emscripten
-      run: |
-        echo $(which emcc)
-        emcc -v
-
-    - name: build wasm
-      run: |
-        export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/leaf/parser
-        export PATH="$(dirname $(which emmake)):$PATH"
-        $PYTHON ${{github.workspace}}/build/builder.py wasm
-
-    - name: upload wasm file
-      uses: actions/upload-artifact@v4
-      with:
-        name: namu-wasm
-        path: |
-          ${{github.workspace}}/bin/namu.js
-          ${{github.workspace}}/bin/namu.wasm
-
-  measure-coverage:
-    needs: [build-on-linux]
-    name: measure code coverage
-    runs-on: ubuntu-22.04
-
-    steps:
-    - name: install native dependencies
-      run: |
-        sudo apt-get update
-        sudo apt install -y python3 python3-pip cmake wget flex graphviz clang-format clang-tidy llvm lcov
-        ls .
-        sudo wget https://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
-        tar -zxvf bison-3.8.2.tar.gz
-        cd bison-3.8.2
-        ./configure
-        sudo make
-        sudo make install
-        cd ..
-        sudo rm -rf bison-3.8.2
-        sudo mv /usr/bin/bison /usr/bin/bison-prev
-        sudo ln -s /usr/local/bin/bison /usr/bin/bison
-
-    - name: checkout repository codes.
-      uses: actions/checkout@v2
-
-    - name: build for measuring coverage
-      run: |
-        export C=clang CXX=clang++ PYTHON=$(which python3)
-        sudo $PYTHON ${{github.workspace}}/build/builder.py cov
-
-    - name: upload coverage report to codecov
-      uses: codecov/codecov-action@v4.0.1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./build/cov.info
-
-  build-on-macos:
-    needs: [checking-code-format]
-    name: build on macos
-    runs-on: macos-15
-
-    steps:
-    - name: checkout repository codes
-      uses: actions/checkout@v4
-
-    - name: install native dependencies.
-      run: |
-        brew unlink python && brew link --overwrite python
-        brew install cmake wget bison flex graphviz llvm
-        echo 'export PATH="/opt/homebrew/opt/llvm/bin:$PATH"' >> /Users/runner/.bash_profile
-        source /Users/runner/.bash_profile
-
-        echo "install bison"
-        sudo wget https://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
-        tar -zxvf bison-3.8.2.tar.gz
-        cd bison-3.8.2
-        ./configure
-        sudo make
-        sudo make install
-        cd ..
-
-    - name: build in release mode & test current codes.
-      run: |
-        source /Users/runner/.bash_profile
-        export PATH="$PATH:/usr/local/opt/flex/bin:/usr/local/opt/bison/bin"
-        export C=clang CXX=clang++ PYTHON=$(which python3)
-        ls -l ${{github.workspace}}/mod/leaf/parser/bison
-        $PYTHON ${{github.workspace}}/build/builder.py pub mac
-        $PYTHON ${{github.workspace}}/build/builder.py test
-
-    - name: archive to tar files
-      run: tar -cvf namu-macos-x64.tar ${{github.workspace}}/bin/
-
-    - name: upload output files.
-      uses: actions/upload-artifact@v4
-      with:
-        name: namu-macos-x64
-        path: namu-macos-x64.tar
-
-  build-on-windows:
-    needs: [checking-code-format]
-    name: build on windows
-    runs-on: windows-latest
-
-    steps:
-    - name: checkout repository codes
-      uses: actions/checkout@v2
-
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.1
-
-    - name: install apps from choco
-      uses: crazy-max/ghaction-chocolatey@v2.0.0
-      with:
-        args: install -y wget unzip zip
-
-    - name: get flex_bison for windows & unzip
-      run: |
-        mkdir ${{github.workspace}}\flex_bison
-        wget -O flex_bison\flex_bison.zip https://github.com/lexxmark/winflexbison/releases/download/v2.5.25/win_flex_bison-2.5.25.zip
-        cd flex_bison
-        unzip flex_bison.zip
-        ren win_flex.exe flex.exe
-        ren win_bison.exe bison.exe
-
-    - name: build in release mode
-      run: |
-        $env:PATH = "$env:PATH;${{github.workspace}}\flex_bison"
-        python ${{github.workspace}}\build\builder.py pub win
-
-    - name: archives to zip file
-      run: |
-        zip -9vr namu-win-x64-portable.zip ${{github.workspace}}\bin
-
-    - name: upload output files.
-      uses: actions/upload-artifact@v4
-      with:
-        name: namu-win-x64-portable
-        path: namu-win-x64-portable.zip
-
-    - name: get advanced installer
-      uses: caphyon/advinst-github-action@v2.0
-      with:
-        # advinst-license:
-        advinst-enable-automation: 'true'
-
-    - name: build msi installer
-      shell: pwsh
-      run: |
-        $aipPath = "${{github.workspace}}\.github\workflows\namu.aip";
-        Write-Host "AIP: $aipPath";
-        $advinst = new-object -com advancedinstaller;
-        $project = $advinst.LoadProject($aipPath);
-        $productDetails = $project.ProductDetails;
-        $productDetails.Version = $(python ${{github.workspace}}\build\builder.py ver)
-        Write-Host "Version: $productDetails.Version";
-        $project.Build();
-
-    - name: upload msi file
-      uses: actions/upload-artifact@v4
-      with:
-        name: namu-win-x64
-        path: ${{github.workspace}}\.github\workflows\namu-win-x64.msi
-
-  publish-doc:
-    needs: [build-on-linux, build-on-macos, build-on-windows, build-for-wasm]
-    name: publish doc
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: install native dependencies.
-        run: |
-          sudo apt install -y doxygen graphviz python3 python3-pip ruby rubygems
-
-      - name: install python dependencies.
-        run: sudo python3 -m pip install --upgrade jinja2 Pygments
-
-      - name: install gems.
-        run: sudo gem install jekyll bundler
-
-      - name: checkout master codes.
-        uses: actions/checkout@v2
-
-      - name: commit docs if it's different to previous commit
-        run: |
-          export C=clang CXX=clang++ PYTHON=$(which python3)
-          sudo $PYTHON ${{github.workspace}}/build/builder.py doc
-          sudo $PYTHON ${{github.workspace}}/build/builder.py pubdoc
-
-      - name: push the commit
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          directory: ${{github.workspace}}/build/html
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          branch: 'gh-pages'
