--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: install native dependencies.
       run: |
         brew unlink python && brew link --overwrite python
-        brew install wget bison flex graphviz llvm clang-tidy
+        brew install wget bison flex graphviz llvm
 
         # softlink for clang-format and clang-tidy 
         ln -s "$(brew --prefix llvm)/bin/clang-tidy" "/usr/local/bin/clang-tidy"
